<resources>
    <string name="app_name">MemoriesMap</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notes_header">Notes</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="openSettingsBtnText">Настройки</string>
    <string name="registrationBtnText">Зарегистрироваться</string>
    <string name="atuthorizationBtnText">Войти</string>
    <string name="startText">Добро пожаловать в Memories Map!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Имя</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_repeat_password">Повторите пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="signup_btn_text">Зарегистрироваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Добро пожаловать в Memories Map!</string>
    <string name="invalid_username">Некорректное имя. Длина должна быть от 3 до 16 символов</string>
    <string name="invalid_password">Некорректный пароль. Длина должна быть от 16 до 32 символов</string>
    <string name="user_already_exist">Пользователь с такой почтой уже зарегистрирован</string>
    <string name="invalid_repeat_password">Пароли не совпадают</string>
    <string name="null_data_error">Все поля должны быть заполнены</string>
    <string name="user_doesnt_exist">Такой пользователь не найден</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="registration_text_view">Введите данные для регистрации</string>
    <string name="authorization_text_view">Введите данные для входа</string>
    <string name="authorization_checkbox_text">Запомнить меня</string>

    <!-- Strings related to registration -->
    <string name="successful_registration_toast_text">Регистрация прошла успешно</string>
    <string name="unsuccessful_registration_toast_text">Не удалось зарегистрировать пользователя</string>
    <string name="profile">Профиль</string>
    <string name="memories">Воспоминания</string>
    <string name="map">Карта</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avatar">avatar</string>
    <string name="example_text">example text</string>
    <string name="log_out">Выйти</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="memory_title">Заголовок</string>
    <string name="memory_date">Дата</string>
    <string name="memory_text">Воспоминание</string>

    <string name="adding_memory_text">Добавление воспоминания на карту</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="display_memory">Ваше воспоминание</string>
    <string name="close">Закрыть</string>
</resources>
