<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/addMemoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/memoryTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/memory_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/memoryDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/memory_date"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/memoryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/memory_text"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>